vim save file shortcut change to <c-s>

--- a/config/polybar/pwidgets/main_for_i3.ini
+++ b/config/polybar/pwidgets/main_for_i3.ini
@@ -1,4 +1,3 @@
-
 ;; ┌────────────────────────────────────────────────────────────┐
 ;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
 ;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
@@ -128,15 +127,14 @@ module-margin-right = 0
 ; See the Fonts wiki page for more details
 
 ;font-1
-font-0 = "Iosevka Nerd Font:size=15;5"
-font-1 = "Iosevka Nerd Font:bold:size=11;5"
+font-0 = "Iosevka Nerd Font:size=16;5"
+font-1 = "Iosevka Nerd Font:Semibold:size=13;3"
 font-2 = "Iosevka Nerd Font:size=16;3"
 font-3 = "Source Han Sans CN:size=12;2"
 font-4 = "Iosevka Nerd Font:bold:size=7;2"
-font-5 = "Iosevka Nerd Font:size=16;4"
+font-5 = "Iosevka Nerd Font:size=15;4"
 font-6 = "Iosevka Nerd Font:size=19;4"
-;font-8
-font-7 = "Iosevka Nerd Font:size=20;0"
+font-7 = "Iosevka Nerd Font:size=5;0"
 ;font for pulseaudio
 font-8 = "Iosevka Nerd Font:size=15;3"
 
@@ -153,7 +151,7 @@ inherit = bar/main
 bottom = False
 
 width = 100%
-height = 24
+height = 23
 
 background = ${color.my_bg}
 # background = ${color.trans}
@@ -177,8 +175,8 @@ enable-ipc = true
 fixed-center = true
 
 modules-left = space round-left-date date round-right-date space round-left-tem temperature round-right-tem space round-left-cpu CPU cpu cpu_bar round-right-cpu space round-left-ram RAM memory memory_bar round-right-ram small_space
-modules-center = small_space round-left name 2space_second title i3 round-right
-modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space  round-left-purple 
+modules-center = small_space round-left name i3 2space_second title round-right small_space
+modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space round-left-purple
 
 underline-size = 3
 overline-size = 4
@@ -365,10 +363,10 @@ interval = 1.0
 time = " %k:%M"
 time-alt = " %y-%m-%d %k:%M:%S"
 
-format = <label>
+format=<label>
 format-foreground = ${color.my_black}
 format-background = ${color.my_purple}
-label = "%time%"
+label="%time%"
 # label-overline = ${color.my_bg}
 # label-underline = ${color.my_bg}
 label-font = 2
@@ -455,7 +453,7 @@ format = <label>
 format-foreground = ${color.white}
 format-background = ${color.my_blue}
 format-font = 2
-label = %percentage:3%%
+label = %percentage:2%%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -497,7 +495,7 @@ bar-load-empty-font = 2
 [module/CPU]
 type = custom/text
 
-content =""
+content =" "
 content-foreground = ${color.deep-purple}
 # content-background = ${color.gray}
 content-background = ${color.my_blue}
@@ -521,7 +519,7 @@ format-foreground = ${color.my_red}
 format-background = ${color.my_yellow}
 format-font = 2
 
-label = "%{F#455456}%percentage_used:2%%%{F-}:%{F#030039}%mb_used%"
+label = "%{F#455456}%percentage_used:3%%%{F-}:%{F#030039}%mb_used%"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -569,7 +567,7 @@ content-font = 6
 # content-overline = ${color.my_bg}
 # content-underline = ${color.my_bg}
 
-click-left =  alacritty -T 悬浮窗口 &
+click-left =  ~/.config/scripts/alacritty
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/name]
@@ -579,111 +577,112 @@ format = <label-state>
 # format-font = 5
 
 # label-active = "|%{F#43A047} %{F-}%name%| "
-label-padding = 0
-label-active = "%name%"
-label-active-padding = 1
+label-active = " %name% "
 # label-active-underline = ${color.my_bg}
 # label-active-overline = ${color.my_bg}
 
-label-active-background = ${color.my_green}
 label-active-foreground = ${color.black}
+label-active-background = ${color.my_green}
 
 # label-occupied = "%{F#757575}%{F-}%name% "
-label-occupied = "%{F#757575}%{F-}%{F#757575}%name%%{F-}"
-label-occupied-font = 6
+
+label-occupied = %{F#757575} %{F-}%{F#757575}%name% %{F-}
+label-occupied-background = ${color.my_green}
 # label-occupied-overline = ${color.my_bg}
 # label-occupied-underline = ${color.my_bg}
 
-label-occupied-foreground = ${color.yellow}
-label-occupied-background = ${color.my_green}
+label-urgent = "%name%  "
+label-urgent-background = ${color.my_green}
+label-urgent-padding = 1
+# label-occupied-foreground = ${color.yellow}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-# [module/dwm]
-# type = internal/dwm
-# format = <label-tags>
-# format-font = 1
-# ; Path to dwm socket (default: /tmp/dwm.sock)
-# ; socket-path = /tmp/dwm.sock
-# 
-# ; Left-click to view tag, right-click to toggle tag view
-# enable-tags-click = true
-# ; Scroll to cycle between available tags
-# enable-tags-scroll = true
-# ; If true and enable-tags-scroll = true, scrolling will view all tags regardless if occupied
-# tags-scroll-empty = true
-# ; If true and enable-tags-scroll = true, scrolling will cycle through tags backwards
-# tags-scroll-reverse = true
-# ; If true and enable-tags-scroll = true, wrap active tag when scrolling
-# tags-scroll-wrap = true
-# ; Left-click to set secondary layout, right-click to switch to previous layout
-# enable-layout-click = true
-# ; Scroll to cycle between available layouts
-# enable-layout-scroll = true
-# ; Wrap when scrolling and reaching beginning/end of layouts
-# layout-scroll-wrap = true
-# ; Reverse scroll direction
-# layout-scroll-reverse = true
-# 
-# ; If enable-layout-click = true, clicking the layout symbol will switch to this layout
-# secondary-layout-symbol = [M]
-# 
-# ; Separator in between shown tags
-# ; label-separator = |
-# 
-# ; Title of currently focused window
-# ; Available tokens:
-# ;   %title%
-# label-title = %title%
-# label-title-padding = 0
-# label-title-foreground = ${color.black}
-# label-title-maxlen = 30
-# 
-# ; Defaults to 'Desktop'
-# label-title-default = "Desktop"
-# 
-# ; Symbol of current layout
-# ; Available tokens:
-# ;   %symbol%
-# label-layout = %symbol%
-# label-layout-padding = 0
-# label-layout-foreground = #000
-# label-layout-background = ${color.my_green}
-# 
-# ; Text to show when currently focused window is floating
-# label-floating = F
-# 
-# ; States: focused, unfocused, visible, urgent, empty
-# ; Available tokens:
-# ;   %name%
-# 
-# ; focused = Selected tag on focused monitor
-# label-focused = " %name%"
-# label-focused-foreground = ${color.black}
-# label-focused-background = ${color.my_green}
-# # label-focused-underline= ${color.primacwry}
-# label-focused-padding = 1
-# 
-# ; unfocused = Unselected tag on unselected monitor
-# label-unfocused = %{F#CCCCCC}%{F-}%{F#CCCCCC}%name%%{F-}
-# label-unfocused-padding = 1
-# 
-# ; visible = Unselected tag, but occupied tag on any monitor
-# label-visible = %{F#757575}%{F-}%{F#757575}%name%%{F-}
-# label-visible-background = ${color.my_green}
-# label-visible-underline = ${color.my_green}
-# label-visible-padding = ${color.my_green}
-# 
-# ; urgent = Unselected tag with window that has urgency hint set
-# label-urgent = %name%
-# label-urgent-background = ${color.my_green}
-# label-urgent-padding = 1
-# 
-# ; empty = Unselected and unoccupied tag
-# ; This can be set to an empty string to hide empty tags
-# label-empty = 
-# label-empty-background = ${color.my_green}
-# label-empty-padding = 1
-# ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/dwm]
+type = internal/dwm
+format = <label-tags>
+format-font = 1
+; Path to dwm socket (default: /tmp/dwm.sock)
+; socket-path = /tmp/dwm.sock
+
+; Left-click to view tag, right-click to toggle tag view
+enable-tags-click = true
+; Scroll to cycle between available tags
+enable-tags-scroll = true
+; If true and enable-tags-scroll = true, scrolling will view all tags regardless if occupied
+tags-scroll-empty = true
+; If true and enable-tags-scroll = true, scrolling will cycle through tags backwards
+tags-scroll-reverse = true
+; If true and enable-tags-scroll = true, wrap active tag when scrolling
+tags-scroll-wrap = true
+; Left-click to set secondary layout, right-click to switch to previous layout
+enable-layout-click = true
+; Scroll to cycle between available layouts
+enable-layout-scroll = true
+; Wrap when scrolling and reaching beginning/end of layouts
+layout-scroll-wrap = true
+; Reverse scroll direction
+layout-scroll-reverse = true
+
+; If enable-layout-click = true, clicking the layout symbol will switch to this layout
+secondary-layout-symbol = [M]
+
+; Separator in between shown tags
+; label-separator = |
+
+; Title of currently focused window
+; Available tokens:
+;   %title%
+label-title = %title%
+label-title-padding = 0
+label-title-foreground = ${color.black}
+label-title-maxlen = 30
+
+; Defaults to 'Desktop'
+label-title-default = "Desktop"
+
+; Symbol of current layout
+; Available tokens:
+;   %symbol%
+label-layout = %symbol%
+label-layout-padding = 0
+label-layout-foreground = #000
+label-layout-background = ${color.my_green}
+
+; Text to show when currently focused window is floating
+label-floating = F
+
+; States: focused, unfocused, visible, urgent, empty
+; Available tokens:
+;   %name%
+
+; focused = Selected tag on focused monitor
+label-focused = " %name% "
+label-focused-foreground = ${color.black}
+label-focused-background = ${color.my_green}
+# label-focused-underline= ${color.primacwry}
+label-focused-padding = 1
+
+; unfocused = Unselected tag on unselected monitor
+label-unfocused = %{F#CCCCCC} %{F-}%{F#CCCCCC}%name% %{F-}
+label-unfocused-padding = 1
+
+; visible = Unselected tag, but occupied tag on any monitor
+label-visible = %{F#757575} %{F-}%{F#757575}%name% %{F-}
+label-visible-background = ${color.my_green}
+label-visible-underline = ${color.my_green}
+label-visible-padding = ${color.my_green}
+
+; urgent = Unselected tag with window that has urgency hint set
+label-urgent = "%name%  "
+label-urgent-background = ${color.my_green}
+label-urgent-padding = 1
+
+; empty = Unselected and unoccupied tag
+; This can be set to an empty string to hide empty tags
+label-empty = 
+label-empty-background = ${color.my_green}
+label-empty-padding = 1
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/title]
 type = internal/xwindow
 
@@ -697,7 +696,7 @@ format-font = 4
 
 label = %title%
 label-font = 4
-label-maxlen = 60
+label-maxlen = 80
 label-empty = Desktop
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -778,30 +777,53 @@ label-unmounted = Not Mounted
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+# [module/pulseaudio]
+# type = internal/pulseaudio
+# 
+# format-volume = <label-volume>
+# 
+# label-volume = %percentage:2%%
+# label-volume-font = 3
+# format-volume-background = ${color.my_pink}
+# # format-volume-overline = ${color.my_bg}
+# # format-volume-underline = ${color.my_bg}
+# 
+# format-muted = "MUTED"
+# format-muted-foreground = ${color.white}
+# # label-muted-overline   = ${color.my_bg}
+# # label-muted-underline   = ${color.my_bg}
+# format-muted-background = ${color.my_pink}
+# format-muted-font = 3
+# 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume>
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
-label-volume = %percentage:2%%
-label-volume-font = 3
-format-volume-background = ${color.my_pink}
-# format-volume-overline = ${color.my_bg}
-# format-volume-underline = ${color.my_bg}
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = false
 
-format-muted = "MUTED"
-format-muted-foreground = ${color.white}
-# label-muted-overline   = ${color.my_bg}
-# label-muted-underline   = ${color.my_bg}
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 20
+label-volume = %percentage%%
+label-volume-background = ${color.my_pink}
 format-muted-background = ${color.my_pink}
-format-muted-font = 3
+label-muted = MUTED
+label-muted-foreground = ${color.white}
+
+click-right = pulseaudio-ctl mute
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/pulseaudio-prefix]
 type = custom/text
-click-left = exec pulseaudio-ctl mute
-click-right = exec pulseaudio-ctl mute
-content = ""
+click-left = pulseaudio-ctl mute
+click-right = pulseaudio-ctl mute
+content = " "
 content-font = 3
 content-foreground = ${color.lime}
 content-background = ${color.my_pink}
@@ -828,7 +850,7 @@ format-volume-background = ${color.my_pink}
 bar-volume-width = 10
 bar-volume-gradient = true
 
-bar-volume-indicator = ▶
+bar-dvolume-indicator = ▶
 bar-volume-indicator-foreground = ${color.white}
 bar-volume-indicator-font = 9
 
