--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -135,7 +135,7 @@ font:
     style: Italic
 
   # Point size
-  size: 13
+  size: 14
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -227,7 +227,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity : 0.93
+background_opacity : 0.94
   # background_opacity : 0.86
 
 # Mouse bindings
@@ -319,10 +319,10 @@ live_config_reload: true
 # Default:
 #   - (Linux/macOS) /bin/bash --login
 #   - (Windows) powershell
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+shell:
+  program: /bin/bash
+  args:
+    - --login
 
 # Windows 10 ConPTY backend (Windows only)
 #
