--- a/config/i3/config
+++ b/config/i3/config
@@ -304,7 +304,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute     exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh --pwidgets
+exec --no-startup-id ~/.config/polybar/pwidgets/launch i3
 exec        --no-startup-id variety
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 # exec --no-startup-id dex --autostart --environment i3
