--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -24,8 +24,8 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 # bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
 # 
 # # reload configuration
-bind r source-file ~/.config/tmux/tmux.conf; display '/home/rongzi/.config/tmux/tmux.conf sourced'
-# 
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
+
 # set -ga update-environment '\
 # DISPLAY DBUS_SESSION_BUS_ADDRESS \
 # QT_IM_MODULE QT_QPA_PLATFORMTHEME \
@@ -46,8 +46,8 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"""""
 # -- prefix
 unbind C-b
-set -g prefix '`'
-bind-key ` send-prefix
+set -g prefix 'C-w'
+bind-key C-w send-prefix
 set-option -g status on
 
 # # -- display
@@ -87,18 +87,20 @@ unbind 9
 unbind 0
 unbind n
 unbind p
+unbind l
 bind -r p previous-window
 bind -r n next-window
 
-bind 1 select-window -t 1
-bind 2 select-window -t 2
-bind 3 select-window -t 3
-bind 4 select-window -t 4
-bind 5 select-window -t 5
-bind 6 select-window -t 6
-bind 7 select-window -t 7
-bind 8 select-window -t 8
-bind 9 select-window -t 9
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+bind -n M-0 select-window -t 0
 
 
 # bind -n ! join-pane -t :1
@@ -110,11 +112,11 @@ bind 9 select-window -t 9
 # bind -n & join-pane -t :7
 # bind -n * join-pane -t :8
 # bind -n ( join-pane -t :9
-
-bind k split-window -vb -c "#{pane_current_path}"
-bind j split-window -v -c "#{pane_current_path}"
-bind h split-window -hb -c "#{pane_current_path}"
-bind l split-window -h -c "#{pane_current_path}"
+unbind c
+bind C-k split-window -vb -c "#{pane_current_path}"
+bind C-j split-window -v -c "#{pane_current_path}"
+bind C-h split-window -hb -c "#{pane_current_path}"
+bind C-l split-window -h -c "#{pane_current_path}"
 
 bind -n c-\\ resize-pane -Z
 
@@ -134,19 +136,27 @@ bind -n M-l select-pane -R
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-Space next-layout
+# unbind q
+bind C-e select-pane
+
+bind C-t new-window -c
+bind -n M-p next-window
+bind -n M-n previous-window
+bind -n M-S kill-pane
+
 bind > swap-pane -D
 bind < swap-pane -U
 bind | swap-pane
 # 
-# bind W choose-tree -Z
+bind C-e choose-tree -Z
 # bind S choose-tree 'move-pane -v -s "%%"'
 # bind V choose-tree 'move-pane -h -s "%%"'
 # 
 # # pane resizing
-# bind S-h resize-pane -L 6
-# bind S-l resize-pane -R 6
-# bind S-j resize-pane -D 6
-# bind S-k resize-pane -U 6
+# bind u resize-pane -L 6
+# bind p resize-pane -R 6
+# bind j resize-pane -D 6
+# bind k resize-pane -U 6
 
 # set -g status-keys emacs
 # set -g mode-keys vi
@@ -232,25 +242,26 @@ setw -g clock-mode-colour colour5
 setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
 # panes
-set -g pane-border-style 'fg=colour19 bg=colour0'
+set -g pane-border-style 'fg=colour59 bg=colour0'
 set -g pane-active-border-style 'bg=colour0 fg=colour9'
 
 # statusbar
 set -g status-position top
 set -g status-justify left
-set -g status-style 'bg=colour59 fg=colour137 dim'
+set -g status-style 'bg=colour59 fg=colour255 dim'
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour2] %H:%M #[fg=colour233,bg=colour1] %x•%A#[fg=colour1,bg=colour233]'
 set -g status-right-length 50
 set -g status-left-length 20
 
 setw -g window-status-current-style 'fg=colour255 bg=colour69 bold'
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour0]  '
 
-setw -g window-status-style 'fg=colour250 bg=colour16'
-setw -g window-status-format ' #I#[fg=colour69]:#[fg=colour270]#W#[fg=colour240]#F '
+# setw -g window-status-style 'fg=colour250 bg=colour16'
+setw -g window-status-style 'fg=colour253 bg=colour102'
+setw -g window-status-format ' #I#[fg=colour252]:#[fg=colour252]#W#[fg=colour252]  '
 
-setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+setw -g window-status-bell-style 'fg=colour255 bg=colour255 bold'
 
 # messages
-set -g message-style 'fg=colour232 bg=colour100 bold'
+set -g message-style 'fg=colour232 bg=colour102 bold'
