add install.sh, should have done this long before:-)

--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -128,7 +128,7 @@ module-margin-right = 0
 
 ;font-1
 font-0 = "Iosevka Nerd Font:size=16;5"
-font-1 = "Iosevka Nerd Font:Semibold:size=13;3"
+font-1 = "Iosevka Nerd Font:semibold:size=13;3"
 font-2 = "Iosevka Nerd Font:size=16;3"
 font-3 = "Source Han Sans CN:size=12;2"
 font-4 = "Iosevka Nerd Font:bold:size=7;2"
