--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -57,15 +57,15 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: full
+  #   decorations: full
 
   # When true, alacritty starts maximized.
-  startup_mode: Windowed
+  #   startup_mode: Windowed
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
-  history: 10000
+  history: 3000
 
   # Number of lines the viewport will move for every line scrolled when
   # scrollback is enabled (history > 0).
@@ -174,52 +174,116 @@ font:
     persistent_logging: false
 
 # Colors (Dracula)
-colors:
-  # Default colors
-  primary:
-    #     background: '0x282a36'
-    background: '0x282a36'
-    foreground: '0xbfbfbf'
+# colors:
+#   # Default colors
+#   primary:
+#     #     background: '0x282a36'
+#     background: '0x282a36'
+#     foreground: '0xbfbfbf'
+# 
+#   # Normal colors
+#   normal:
+#     #     black:   '0x000000'
+#     #     red:     '0xff5555'
+#     #     green:   '0x50fa7b'
+#     #     yellow:  '0xf1fa8c'
+#     #     blue:    '0xcaa9fa'
+#     #     magenta: '0xff79c6'
+#     #     cyan:    '0x8be9fd'
+#     #     white:   '0xbfbfbf'
+#     black:        '0x282c34'
+#     white:        '0xabb2bf'
+#     red:          '0xbe5046'
+#     green:        '0x98c379'
+#     yellow:       '0xe5c07b'
+#     blue:         '0x61afef'
+#     magenta:      '0xc678dd'
+#     cyan:         '0x56b6c2'
+# 
+#   # Bright colors
+#   bright:
+#     black:   '0x282a35'
+#     red:     '0xff6e67'
+#     green:   '0x5af78e'
+#     yellow:  '0xf4f99d'
+#     blue:    '0xcaa9fa'
+#     magenta: '0xff92d0'
+#     cyan:    '0x9aedfe'
+#     white:   '0xe6e6e6'
+#     black:        '0x282c34'
+#     #     white:        '0xabb2bf'
+#     #     red:          '0xe06c75'
+#     #     green:        '0x98c379'
+#     #     yellow:       '0xd19a66'
+#     #     blue:         '0x61afef'
+#     #     magenta:      '0xc678dd'
+#     #     cyan:         '0x56b6c2'
 
-  # Normal colors
-  normal:
-    #     black:   '0x000000'
-    #     red:     '0xff5555'
-    #     green:   '0x50fa7b'
-    #     yellow:  '0xf1fa8c'
-    #     blue:    '0xcaa9fa'
-    #     magenta: '0xff79c6'
-    #     cyan:    '0x8be9fd'
-    #     white:   '0xbfbfbf'
-    black:        '0x282c34'
-    white:        '0xabb2bf'
-    red:          '0xbe5046'
-    green:        '0x98c379'
-    yellow:       '0xe5c07b'
-    blue:         '0x61afef'
-    magenta:      '0xc678dd'
-    cyan:         '0x56b6c2'
-
-  # Bright colors
-  bright:
-    #     black:   '0x282a35'
-    #     red:     '0xff6e67'
-    #     green:   '0x5af78e'
-    #     yellow:  '0xf4f99d'
-    #     blue:    '0xcaa9fa'
-    #     magenta: '0xff92d0'
-    #     cyan:    '0x9aedfe'
-    #     white:   '0xe6e6e6'
-    black:        '0x282c34'
-    white:        '0xabb2bf'
-    red:          '0xe06c75'
-    green:        '0x98c379'
-    yellow:       '0xd19a66'
-    blue:         '0x61afef'
-    magenta:      '0xc678dd'
-    cyan:         '0x56b6c2'
-  
-
+      # colors:
+      #   # Default colors (onedark)
+      #   primary:
+      #     background: '0x1e2127'
+      #     foreground: '0xabb2bf'
+      # 
+      #     # Bright and dim foreground colors
+      #     #
+      #     # The dimmed foreground color is calculated automatically if it is not present.
+      #     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+      #     # is `false`, the normal foreground color will be used.
+      #     #dim_foreground: '0x9a9a9a'
+      #     bright_foreground: '0xe6efff'
+      # 
+      #   # Cursor colors
+      #   #
+      #   # Colors which should be used to draw the terminal cursor. If these are unset,
+      #   # the cursor color will be the inverse of the cell color.
+      #   #cursor:
+      #   #  text: '0x000000'
+      #   #  cursor: '0xffffff'
+      # 
+      #   # Normal colors
+      #   normal:
+      #     black:   '0x1e2127'
+      #     red:     '0xe06c75'
+      #     green:   '0x98c379'
+      #     yellow:  '0xd19a66'
+      #     blue:    '0x61afef'
+      #     magenta: '0xc678dd'
+      #     cyan:    '0x56b6c2'
+      #     white:   '0x828791'
+      # 
+      #   # Bright colors
+      #   bright:
+      #     black:   '0x5c6370'
+      #     red:     '0xe06c75'
+      #     green:   '0x98c379'
+      #     yellow:  '0xd19a66'
+      #     blue:    '0x61afef'
+      #     magenta: '0xc678dd'
+      #     cyan:    '0x56b6c2'
+      #     white:   '0xe6efff'
+      # 
+      #   # Dim colors
+      #   #
+      #   # If the dim colors are not set, they will be calculated automatically based
+      #   # on the `normal` colors.
+      #   dim:
+      #     black:   '0x1e2127'
+      #     red:     '0xe06c75'
+      #     green:   '0x98c379'
+      #     yellow:  '0xd19a66'
+      #     blue:    '0x61afef'
+      #     magenta: '0xc678dd'
+      #     cyan:    '0x56b6c2'
+      #       # white:   '0x828791'
+      # 
+      #   # Indexed Colors
+      #   #
+      #   # The indexed colors include all colors from 16 to 256.
+      #   # When these are not set, they're filled with sensible defaults.
+      #   #indexed_colors:
+      #   #  - { index: 16, color: '0x000000' }
+      # 
 bell:
   duration: 0
 
@@ -227,8 +291,9 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity : 0.94
-  # background_opacity : 0.86
+background_opacity : 0.9
+# background_opacity : 0.94
+# background_opacity : 0.86
 
 # Mouse bindings
 #
@@ -321,8 +386,9 @@ live_config_reload: true
 #   - (Windows) powershell
 shell:
   program: /bin/bash
-  args:
-    - --login
+    #  args:
+    #  - --login
+    #    <++> this make bash read .bash_profile rather than .bashrc
 
 # Windows 10 ConPTY backend (Windows only)
 #
@@ -554,3 +620,5 @@ enable_experimental_conpty_backend: false
 #   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                      }
 #   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
 #   - { key: NumpadEnter,             chars: "\n"                              }
+import:
+  - ~/Downloads/Github/alacritty-theme/themes/tokyo-night.yaml
