--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -250,8 +250,8 @@ set -g status-position top
 set -g status-justify left
 set -g status-style 'bg=colour59 fg=colour255 dim'
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour2] %H:%M #[fg=colour233,bg=colour1] %x•%A#[fg=colour1,bg=colour233]'
-set -g status-right-length 50
+set -g status-right '#[fg=colour233,bg=colour2] #H %H:%M #[fg=colour233,bg=colour250] %x•%A#[fg=colour1,bg=colour233]'
+set -g status-right-length 100
 set -g status-left-length 20
 
 setw -g window-status-current-style 'fg=colour255 bg=colour69 bold'
@@ -265,3 +265,4 @@ setw -g window-status-bell-style 'fg=colour255 bg=colour255 bold'
 
 # messages
 set -g message-style 'fg=colour232 bg=colour102 bold'
+set -g default-shell "${SHELL}"
