add joshuto/fzf file select function

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -139,7 +139,7 @@ bind -n M-Space next-layout
 # unbind q
 bind C-e select-pane
 
-bind C-t new-window -c
+bind C-t new-window
 bind -n M-p next-window
 bind -n M-n previous-window
 bind -n M-S kill-pane
