--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -320,15 +320,15 @@ throttle-output-for = 10
 ;throttle-input-for = 30
 
 ; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
-screenchange-reload = false
+screenchange-reload = true
 
 ; Compositing operators
 ; @see: https://www.cairographics.org/manual/cairo-cairo-t.html#cairo-operator-t
 compositing-background = source
 compositing-foreground = over
-compositing-overline = over
-compositing-underline = over
-compositing-border = over
+compositing-overline   = over
+compositing-underline  = over
+compositing-border     = over
 
 ; Define fallback values used by all module formats
 ;format-foreground = 
@@ -694,7 +694,7 @@ format-font = 4
 
 label = %title%
 label-font = 4
-label-maxlen = 70
+label-maxlen = 65
 label-empty = Desktop
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
