seperate mode.vim from calling func to calling command

--- a/config/polybar/pwidgets/colors.ini
+++ b/config/polybar/pwidgets/colors.ini
@@ -21,6 +21,10 @@ my_yellow = #ccab40
 my_green = #8dbf73
 my_pink = #c08997
 my_wifi = #709bab
+my_wired = #709bab
+my_usb_wifi0 = #7aa2f7
+my_usb_wifi1 = #3399c8
+my_pci_wifi = #709bab
 my_fs = #050339
 my_black = #222222
 my_tem = #000000
