--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -176,7 +176,7 @@ fixed-center = true
 
 modules-left = space round-left-date date round-right-date space round-left-tem temperature round-right-tem space round-left-cpu CPU cpu cpu_bar round-right-cpu space round-left-ram RAM memory memory_bar round-right-ram small_space
 modules-center = small_space round-left dwm 2space_second title round-right small_space
-modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space round-left-purple
+modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wired-network wireless-network-usb0 wireless-network-usb1  wireless-network-pci round-right-wifi space round-left-fs fs round-right-fs space round-left-purple
 
 underline-size = 3
 overline-size = 4
@@ -694,11 +694,147 @@ format-font = 4
 
 label = %title%
 label-font = 4
-label-maxlen = 65
+label-maxlen = 60
 label-empty = Desktop
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-[module/wireless-network]
+[module/wired-network]
+type = internal/network
+;interface = enp4s0
+# interface = wlp1s0
+interface = enp0s20f0u3c2
+interval = 0.5
+ping-interval = 10
+speed-unit=
+
+format-connected = <label-connected>
+format-connected-font = 2
+label-connected ="%{T2}%upspeed:6%  %downspeed:6%%{T-} "
+# label-connected ="  %downspeed:8%"
+# label-connected = "   %downspeed%%{A}"
+# format-connected-underline = ${color.my_bg}
+# format-connected-overline = ${color.my_bg}
+
+label-connected-background = ${color.my_wired}
+
+format-disconnected = <label-disconnected>
+format-disconnected-font = 2
+label-disconnected = "%{T2} WIREDLESS󰖪 %{T-}"
+label-disconnected-background = ${color.my_wired}
+# label-connected ="  %downspeed:8%"
+# ✓ 😄 ⏱️ ⏳ 
+# label-connected = "   %downspeed%%{A}"
+
+# format-connected-font = 2
+# format-disconnected-font = 2
+# 
+# ramp-signal-0 = 
+# ramp-signal-1 = 
+# ramp-signal-2 = 
+# ramp-signal-3 = 
+# ramp-signal-4 = 
+# 
+# animation-packetloss-0 = 
+# animation-packetloss-0-foreground = #ffa64c
+# animation-packetloss-1 = 
+# animation-packetloss-1-foreground = ${bar/top.foreground}
+# animation-packetloss-framerate = 500
+# 
+# 
+[module/wireless-network-usb1]
+type = internal/network
+;interface = enp4s0
+# interface = wlp1s0
+interface = wlp0s20f0u2
+interval = 0.5
+ping-interval = 10
+speed-unit=
+
+format-connected = <label-connected>
+format-connected-font = 2
+label-connected ="%{T2}%upspeed:6%  %downspeed:6%%{T-} "
+# label-connected ="  %downspeed:8%"
+# label-connected = "   %downspeed%%{A}"
+# format-connected-underline = ${color.my_bg}
+# format-connected-overline = ${color.my_bg}
+
+label-connected-background = ${color.my_usb_wifi1}
+
+format-disconnected = <label-disconnected>
+format-disconnected-font = 2
+label-disconnected = ""
+label-disconnected-background = ${color.my_usb_wifi1}
+# label-disconnected = "%{T2}󰖪 DISCONENCTED%{T-}"
+# label-connected ="  %downspeed:8%"
+# ✓ 😄 ⏱️ ⏳ 
+# label-connected = "   %downspeed%%{A}"
+
+# format-connected-font = 2
+# format-disconnected-font = 2
+# 
+# ramp-signal-0 = 
+# ramp-signal-1 = 
+# ramp-signal-2 = 
+# ramp-signal-3 = 
+# ramp-signal-4 = 
+# 
+# animation-packetloss-0 = 
+# animation-packetloss-0-foreground = #ffa64c
+# animation-packetloss-1 = 
+# animation-packetloss-1-foreground = ${bar/top.foreground}
+# animation-packetloss-framerate = 500
+# 
+# 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/wireless-network-usb0]
+type = internal/network
+;interface = enp4s0
+# interface = wlp1s0
+interface = wlp0s20f0u2i2
+interval = 0.5
+ping-interval = 10
+speed-unit=
+
+format-connected = <label-connected>
+format-connected-font = 2
+label-connected ="%{T2}%upspeed:6%  %downspeed:6%%{T-} "
+# label-connected ="  %downspeed:8%"
+# label-connected = "   %downspeed%%{A}"
+# format-connected-underline = ${color.my_bg}
+# format-connected-overline = ${color.my_bg}
+
+label-connected-background = ${color.my_usb_wifi0}
+
+format-disconnected = <label-disconnected>
+format-disconnected-font = 2
+label-disconnected = ""
+label-disconnected-background = ${color.my_usb_wifi0}
+# label-disconnected = "%{T2}󰖪 DISCONENCTED%{T-}"
+# label-connected ="  %downspeed:8%"
+# ✓ 😄 ⏱️ ⏳ 
+# label-connected = "   %downspeed%%{A}"
+
+# format-connected-font = 2
+# format-disconnected-font = 2
+# 
+# ramp-signal-0 = 
+# ramp-signal-1 = 
+# ramp-signal-2 = 
+# ramp-signal-3 = 
+# ramp-signal-4 = 
+# 
+# animation-packetloss-0 = 
+# animation-packetloss-0-foreground = #ffa64c
+# animation-packetloss-1 = 
+# animation-packetloss-1-foreground = ${bar/top.foreground}
+# animation-packetloss-framerate = 500
+# 
+# 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/wireless-network-pci]
 type = internal/network
 ;interface = enp4s0
 interface = wlp1s0
@@ -714,15 +850,14 @@ label-connected ="%{T2}%upspeed:6%  %downspeed:6%%{T-}"
 # format-connected-underline = ${color.my_bg}
 # format-connected-overline = ${color.my_bg}
 
-label-connected-background = ${color.my_wifi}
+label-connected-background = ${color.my_pci_wifi}
 
 format-disconnected = <label-disconnected>
 format-disconnected-font = 2
-label-disconnected = "DISCONENCTED"
-label-disconnected-background = ${color.my_wifi}
+label-disconnected = "🛇"
+label-disconnected-background = ${color.my_pci_wifi}
 # label-disconnected = "%{T2}󰖪 DISCONENCTED%{T-}"
 # label-connected ="  %downspeed:8%"
-# ✓ 😄 ⏱️ ⏳ 
 # label-connected = "   %downspeed%%{A}"
 
 # format-connected-font = 2
