--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -84,7 +84,6 @@ unbind 6
 unbind 7
 unbind 8
 unbind 9
-unbind 0
 unbind n
 unbind p
 unbind l
@@ -114,11 +113,11 @@ bind -n M-0 select-window -t 0
 # bind -n ( join-pane -t :9
 unbind c
 bind C-k split-window -vb -c "#{pane_current_path}"
-bind C-j split-window -v -c "#{pane_current_path}"
+bind C-j split-window -v  -l 20% -c "#{pane_current_path}"
 bind C-h split-window -hb -c "#{pane_current_path}"
 bind C-l split-window -h -c "#{pane_current_path}"
 
-bind -n c-\\ resize-pane -Z
+bind -n C-] resize-pane -Z
 
 # pane navigation
 # bind 1 select-pane -t:.1
@@ -149,14 +148,15 @@ bind < swap-pane -U
 bind | swap-pane
 # 
 bind C-e choose-tree -Z
+# bind-key C-e resize-pane -Z \; choose-tree "resize-pane -Z \; select-window -t '%%'"
 # bind S choose-tree 'move-pane -v -s "%%"'
 # bind V choose-tree 'move-pane -h -s "%%"'
 # 
 # # pane resizing
-# bind u resize-pane -L 6
-# bind p resize-pane -R 6
-# bind j resize-pane -D 6
-# bind k resize-pane -U 6
+bind -n M-H resize-pane -L 10
+bind -n M-L resize-pane -R 10
+bind -n M-J resize-pane -D 6
+bind -n M-K resize-pane -U 6
 
 # set -g status-keys emacs
 # set -g mode-keys vi
