--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -106,8 +106,9 @@ font:
     #     family: JetBrainsMono Nerd Font
     #     family: FiraCode Nerd Font
     #     family: Fixedsys Excelsior
-    family: FiraCode Nerd Font
-    style: medium
+    # family: FiraCode Nerd Font
+    family: Cascadia Code
+    style: Medium
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -171,9 +172,9 @@ font:
 
   debug:
     # display the time it takes to redraw each frame.
-    render_timer: true
+    # render_timer: true
     # Keep the log file after quitting Alacritty.
-    persistent_logging: false
+    # persistent_logging: false
 
 # Colors (Dracula)
 # colors:
